--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+.flex{
+    display: flex;
+    text-align: center;
+}
 
 .container1 {
     max-width: 100%;
@@ -13,6 +17,7 @@
 
 a {
     display: inline-block;
+    text-decoration: none;
 }
 
 h1 {
@@ -74,26 +79,34 @@ h3 {
 
 /* company-section */
 .logos {
-    gap: 20px;
-    text-align: center;
+    /* gap: 20px;
     justify-content: space-between;
     display: flex;
     align-items: center;
     flex-wrap: wrap; /* Added to wrap items if they overflow */
+    /*flex-direction: column;
+    flex-wrap: wrap; */
+    padding: 20px;
+    margin: auto;
 }
 
-.logo-item {
+/*.logo-item {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+}*/
 
 .logo {
-    height: 100px;
+    height: 125px;
+    align-items: center;
+    
+
 }
 
 .company-section {
     margin-bottom: 40px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 li a {
@@ -110,7 +123,7 @@ li a {
 
 /* Slideshow container */
 .slideshow-container {
-    max-width: 1000px;
+    max-width: 100%;
     position: relative;
    
     margin: auto;
@@ -193,4 +206,20 @@ li a {
 @keyframes fade {
     from {opacity: .4}
     to {opacity: 1}
+}
+/*Bestsellersection*/
+
+.products-section{
+    display: flex;
+    margin: auto;
+   
+}
+.Bestsellers{
+    width:100%;
+    height:200px;
+    flex-wrap: wrap;
+    margin-bottom: 40px;
+}
+.product{
+    padding: 10px;
 }
